--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
+    "firebase-admin": "^12.5.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -81,7 +83,10 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+      "^@app/common(|/.*)$": "<rootDir>/libs/src/common/$1",
+      "^@app/exception(|/.*)$": "<rootDir>/libs/src/exception/$1",
+      "^@app/commons(|/.*)$": "<rootDir>/libs/commons/src/$1",
+      "^@app/exceptions(|/.*)$": "<rootDir>/libs/exceptions/src/$1"
     }
   }
 }
