--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,18 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/commons": ["libs/commons/src"],
-      "@app/commons/*": ["libs/commons/src/*"],
-      "@app/exceptions": ["libs/exceptions/src"],
-      "@app/exceptions/*": ["libs/exceptions/src/*"]
+      "@app/commons": [
+        "libs/commons/src"
+      ],
+      "@app/commons/*": [
+        "libs/commons/src/*"
+      ],
+      "@app/exceptions": [
+        "libs/exceptions/src"
+      ],
+      "@app/exceptions/*": [
+        "libs/exceptions/src/*"
+      ]
     }
   }
 }
