--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/tanager/main",
     "start:in:dev": "cross-env NODE_ENV=development nest start inbound --watch",
     "start:out:dev": "cross-env NODE_ENV=development nest start outbound --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/apps/tanager/main",
+    "start:in:prod": "node dist/apps/inbound/main",
+    "start:out:prod": "node dist/apps/outbound/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
