--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/tanager/test/jest-e2e.json"
+    "test:e2e": "cross-env NODE_ENV=development jest --config ./apps/tanager/test/jest-e2e.json",
+    "test:in:e2e": "cross-env NODE_ENV=development jest --config ./apps/inbound/test/jest-e2e.json",
+    "test:out:e2e": "cross-env NODE_ENV=development jest --config ./apps/outbound/test/jest-e2e.json"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.11.2",
@@ -35,8 +37,10 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
     "firebase-admin": "^12.5.0",
+    "parse-url": "^9.2.0",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
