--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,25 +17,14 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "esModuleInterop": true,
     "paths": {
-      "@app/commons": [
-        "libs/commons/src"
-      ],
-      "@app/commons/*": [
-        "libs/commons/src/*"
-      ],
-      "@app/exceptions": [
-        "libs/exceptions/src"
-      ],
-      "@app/exceptions/*": [
-        "libs/exceptions/src/*"
-      ],
-      "@app/interceptors": [
-        "libs/interceptors/src"
-      ],
-      "@app/interceptors/*": [
-        "libs/interceptors/src/*"
-      ]
+      "@app/commons": ["libs/commons/src"],
+      "@app/commons/*": ["libs/commons/src/*"],
+      "@app/exceptions": ["libs/exceptions/src"],
+      "@app/exceptions/*": ["libs/exceptions/src/*"],
+      "@app/interceptors": ["libs/interceptors/src"],
+      "@app/interceptors/*": ["libs/interceptors/src/*"]
     }
   }
 }
