--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=development jest --config ./apps/tanager/test/jest-e2e.json",
     "test:in:e2e": "cross-env NODE_ENV=development jest --config ./apps/inbound/test/jest-e2e.json",
-    "test:out:e2e": "cross-env NODE_ENV=development jest --config ./apps/outbound/test/jest-e2e.json"
+    "test:out:e2e": "cross-env NODE_ENV=development jest --config ./apps/outbound/test/jest-e2e.json",
+    "test:in:controller": "cross-env NODE_ENV=development yarn test ./apps/inbound/src/inbound.controller",
+    "test:out:controller": "cross-env NODE_ENV=development yarn test ./apps/outbound/src/outbound.controller"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.11.2",
@@ -97,7 +99,8 @@
       "^@app/exception(|/.*)$": "<rootDir>/libs/src/exception/$1",
       "^@app/commons(|/.*)$": "<rootDir>/libs/commons/src/$1",
       "^@app/exceptions(|/.*)$": "<rootDir>/libs/exceptions/src/$1",
-      "^@app/interceptors(|/.*)$": "<rootDir>/libs/interceptors/src/$1"
+      "^@app/interceptors(|/.*)$": "<rootDir>/libs/interceptors/src/$1",
+      "^@app/models(|/.*)$": "<rootDir>/libs/models/src/$1"
     }
   }
 }
