--- a/package.json
+++ b/package.json
@@ -99,8 +99,7 @@
       "^@app/exception(|/.*)$": "<rootDir>/libs/src/exception/$1",
       "^@app/commons(|/.*)$": "<rootDir>/libs/commons/src/$1",
       "^@app/exceptions(|/.*)$": "<rootDir>/libs/exceptions/src/$1",
-      "^@app/interceptors(|/.*)$": "<rootDir>/libs/interceptors/src/$1",
-      "^@app/models(|/.*)$": "<rootDir>/libs/models/src/$1"
+      "^@app/interceptors(|/.*)$": "<rootDir>/libs/interceptors/src/$1"
     }
   }
 }
