--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,30 +19,12 @@
     "noFallthroughCasesInSwitch": false,
     "esModuleInterop": true,
     "paths": {
-      "@app/commons": [
-        "libs/commons/src"
-      ],
-      "@app/commons/*": [
-        "libs/commons/src/*"
-      ],
-      "@app/exceptions": [
-        "libs/exceptions/src"
-      ],
-      "@app/exceptions/*": [
-        "libs/exceptions/src/*"
-      ],
-      "@app/interceptors": [
-        "libs/interceptors/src"
-      ],
-      "@app/interceptors/*": [
-        "libs/interceptors/src/*"
-      ],
-      "@app/models": [
-        "libs/models/src"
-      ],
-      "@app/models/*": [
-        "libs/models/src/*"
-      ]
+      "@app/commons": ["libs/commons/src"],
+      "@app/commons/*": ["libs/commons/src/*"],
+      "@app/exceptions": ["libs/exceptions/src"],
+      "@app/exceptions/*": ["libs/exceptions/src/*"],
+      "@app/interceptors": ["libs/interceptors/src"],
+      "@app/interceptors/*": ["libs/interceptors/src/*"]
     }
   }
 }
