--- a/tsconfig copy.json
+++ b/tsconfig copy.json
@@ -19,8 +19,12 @@
     "noFallthroughCasesInSwitch": false,
     "esModuleInterop": true,
     "paths": {
-      "@packages": ["packages"],
-      "@packages/*": ["packages/*"]
+      "@app/commons": ["libs/commons/src"],
+      "@app/commons/*": ["libs/commons/src/*"],
+      "@app/exceptions": ["libs/exceptions/src"],
+      "@app/exceptions/*": ["libs/exceptions/src/*"],
+      "@app/interceptors": ["libs/interceptors/src"],
+      "@app/interceptors/*": ["libs/interceptors/src/*"]
     }
   }
 }
