--- a/package.json
+++ b/package.json
@@ -30,28 +30,28 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.6",
     "@grpc/proto-loader": "^0.7.13",
-    "@nestjs/common": "^11.0.7",
-    "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.7",
-    "@nestjs/microservices": "^11.0.7",
-    "@nestjs/platform-express": "^11.0.7",
-    "@nestjs/swagger": "^11.0.3",
+    "@nestjs/common": "^11.1.14",
+    "@nestjs/config": "^4.0.3",
+    "@nestjs/core": "^11.1.14",
+    "@nestjs/microservices": "^11.1.14",
+    "@nestjs/platform-express": "^11.1.14",
+    "@nestjs/swagger": "^11.2.6",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.3",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "firebase-admin": "^13.0.2",
+    "firebase-admin": "^13.6.1",
     "parse-url": "^9.2.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.28"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^11.0.16",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -71,8 +71,18 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "webpack": "^5.97.1",
+    "webpack": "^5.105.2",
     "webpack-node-externals": "^3.0.0"
+  },
+  "resolutions": {
+    "node-forge": ">=1.3.2",
+    "qs": ">=6.14.2",
+    "formidable": ">=3.5.3",
+    "lodash": ">=4.17.23",
+    "@babel/helpers": ">=7.26.10",
+    "@eslint/plugin-kit": ">=0.3.4",
+    "brace-expansion": ">=1.1.12",
+    "diff": ">=4.0.4"
   },
   "jest": {
     "moduleFileExtensions": [
